# proiect-ubd-2025-2026-ddavef

./: .gitignore  LICENSE  README_USAGE.md  index.html  start_all.py
backend/: README.md  app.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: rentals.py  users.py  vehicles.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: rental.py  user.py  vehicle.py
backend/app/schemas/: rental.py  user.py  vehicle.py
backend/app/services/: rental_service.py  user_service.py  vehicle_service.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_rentals.py  test_users.py  test_vehicles.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  i18n.js  main.jsx  styles.css
frontend/src/components/: AdminPanel.jsx  AuthPanel.jsx  HeroSection.jsx  LanguageSelect.jsx  MapPanel.jsx  NavBar.jsx  ProfilePanel.jsx  VehicleGrid.jsx
